--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,11 @@ google-auth
 google-auth-oauthlib
 google-api-python-client
 python-dotenv
+sqlalchemy 
+psycopg2-binary
+
+qrcode
+opencv-python
+pyzbar
+Pillow
+numpy
